--- a/pom.xml
+++ b/pom.xml
@@ -12,23 +12,27 @@
     <artifactId>selenium-java</artifactId>
     <version>4.27.0</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
-<dependency>
-    <groupId>org.seleniumhq.selenium</groupId>
-    <artifactId>selenium-java</artifactId>
-    <version>4.27.0</version>
-</dependency>
 <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
 <dependency>
     <groupId>io.github.bonigarcia</groupId>
     <artifactId>webdrivermanager</artifactId>
     <version>5.9.2</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.10.2</version>
+    <scope>test</scope>
+</dependency>
+
 <dependency>
     <groupId>com.beust</groupId>
     <artifactId>jcommander</artifactId>
     <version>1.78</version> <!-- or the version compatible with your TestNG version -->
 </dependency>
-  </dependencies>
-  
+
+
+
+  </dependencies>  
 </project>
