updated POSQuotationPage and POSQuotationTest pages or dashboard page

--- a/.classpath
+++ b/.classpath
@@ -111,5 +111,6 @@
 	<classpathentry kind="lib" path="C:/Users/Seleniumjava/Selenium new Jars/selenium-java-4.30.0/selenium-safari-driver-4.30.0-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Seleniumjava/Selenium new Jars/selenium-java-4.30.0/selenium-support-4.30.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Seleniumjava/Selenium new Jars/selenium-java-4.30.0/selenium-support-4.30.0-sources.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
